<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moviesappv1.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_movie_poster_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_poster_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            android:scaleType="fitCenter" />

        <TextView
            style="@style/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_original_movie_title" />

        <TextView
            android:id="@+id/tv_original_title"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_plot_synopsis" />

        <TextView
            android:id="@+id/tv_plot_synopsis"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_user_rating" />

        <TextView
            android:id="@+id/tv_user_rating"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_release_date" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>